--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
             font-family: 'Segoe UI', Arial, sans-serif;
         }
 
+        /* 全体の背景にtrial_img.jpgを設定 */
+        body {
+            background-image: url('trial_img.jpg'); /* リポジトリ内の画像 */
+            background-size: cover; /* 画像を画面全体に */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed; /* スクロールしても固定 */
+        }
+
         /* ナビゲーションバー */
         nav {
-            background-color: #2c3e50;
+            background-color: rgba(44, 62, 80, 0.7); /* 半透明で背景が見える */
             padding: 1rem;
             position: fixed;
             width: 100%;
@@ -44,10 +53,10 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(to bottom, #3498db, #2980b9);
             color: white;
             text-align: center;
             padding: 2rem;
+            background: rgba(0, 0, 0, 0.5); /* 半透明の黒でテキストが読みやすく */
         }
         .hero h1 {
             font-size: 3rem;
