--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="twitter-section">
         <h2>私の最新Xポスト</h2>
         <!-- X公式Embedコード（@yourusernameを自分のユーザー名に置き換え） -->
-        <a class="twitter-timeline" href="https://twitter.com/browndogmoko?ref_src=twsrc%5Etfw">Tweets by browndogmoko</a> 
+        <a class="twitter-timeline" href="https://twitter.com/browndogmoko?ref_src=twsrc%5Etfw">by browndogmoko</a> 
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
