--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
 
     <div class="twitter-section">
         <h2>私の最新Xポスト</h2>
-        <a class="twitter-timeline" href="https://twitter.com/browndogmoko?ref_src=twsrc%5Etfw">by browndogmoko</a>
-        <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet">
+            <a href="https://twitter.com/browndogmoko/status/1967840631121907975?ref_src=twsrc%5Etfw"></a>
+        </blockquote>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
     <div class="image-placeholder">
