--- a/index.html
+++ b/index.html
@@ -69,19 +69,31 @@
             max-width: 600px;
             margin: 2rem auto;
             border-radius: 10px;
-            background: rgba(255, 255, 255, 0.7); /* 透過率を強く */
+            background: rgba(255, 255, 255, 0.7);
             min-height: 400px;
         }
 
-        .image-placeholder {
-            width: 100%;
+        .video-section {
             max-width: 800px;
-            height: 300px;
-            background-color: #ecf0f1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             margin: 2rem auto;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.7);
+            padding: 2rem;
+        }
+
+        .youtube-embed {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+        }
+
+        .youtube-embed iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
@@ -94,8 +106,8 @@
                 flex-direction: column;
                 gap: 1rem;
             }
-            .twitter-section, .image-placeholder {
-                max-width: 90%; /* スマホで横幅を狭く */
+            .twitter-section, .video-section {
+                max-width: 90%;
                 margin: 2rem auto;
             }
         }
@@ -123,8 +135,11 @@
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
-    <div class="image-placeholder">
-        <p>ここは画像表示用の領域</p>
+    <div class="video-section">
+        <h2>おすすめ動画</h2>
+        <div class="youtube-embed">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/NxVCIcpXCpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 </html>
