--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
 
     <div class="video-section">
-        <h2>最近の動画（あるいはただの配信）</h2>
+        <h2>最近の動画（配信）</h2>
         <div class="youtube-embed">
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/NxVCIcpXCpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
