--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
 
         body {
+            background-image: url('trial_img.jpg'); /* 背景画像復活 */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -22,29 +23,35 @@
             transition: background 0.5s ease;
         }
 
-        /* 曜日ごとのテーマ */
+        /* 曜日ごとのオーバーレイ */
         body.sunday {
-            background: linear-gradient(135deg, #f5f5f5, #ffffff);
+            background-blend-mode: overlay;
+            background-color: rgba(245, 245, 245, 0.7);
             font-family: 'Segoe UI', Arial, sans-serif;
         }
         body.monday {
-            background: linear-gradient(135deg, #3498db, #2980b9);
+            background-blend-mode: overlay;
+            background-color: rgba(52, 152, 219, 0.7);
             font-family: 'Roboto', sans-serif;
         }
         body.tuesday {
-            background: linear-gradient(135deg, #e74c3c, #ff6b6b);
+            background-blend-mode: overlay;
+            background-color: rgba(231, 76, 60, 0.7);
             font-family: 'Comic Neue', cursive;
         }
         body.wednesday {
-            background: linear-gradient(135deg, #2ecc71, #27ae60);
+            background-blend-mode: overlay;
+            background-color: rgba(46, 204, 113, 0.7);
             font-family: 'Lora', serif;
         }
         body.thursday {
-            background: linear-gradient(135deg, #e67e22, #d35400);
+            background-blend-mode: overlay;
+            background-color: rgba(230, 126, 34, 0.7);
             font-family: 'Merriweather', serif;
         }
         body.friday {
-            background: linear-gradient(135deg, #8e44ad, #9b59b6);
+            background-blend-mode: overlay;
+            background-color: rgba(142, 68, 173, 0.7);
             font-family: 'Playfair Display', serif;
         }
         body.friday .hero h1::after {
@@ -56,7 +63,8 @@
             margin: 10px auto;
         }
         body.saturday {
-            background: linear-gradient(135deg, #f1c40f, #f39c12);
+            background-blend-mode: overlay;
+            background-color: rgba(241, 196, 15, 0.7);
             font-family: 'Indie Flower', cursive;
         }
 
@@ -84,10 +92,10 @@
             color: #3498db;
         }
         body.friday nav a:hover {
-            color: gold; /* 金曜はゴールドホバー */
+            color: gold;
         }
         body.saturday nav a {
-            font-family: 'Indie Flower', cursive; /* 土曜は手書き風 */
+            font-family: 'Indie Flower', cursive;
         }
 
         .hero {
@@ -111,7 +119,7 @@
             max-width: 600px;
         }
         body.tuesday .hero h1 {
-            animation: bounce 1s infinite; /* 火曜はバウンス */
+            animation: bounce 1s infinite;
         }
 
         .twitter-section {
@@ -172,7 +180,6 @@
             }
         }
     </style>
-    <!-- Google Fontsの読み込み -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Comic+Neue&family=Lora&family=Merriweather&family=Playfair+Display&family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body id="body">
@@ -191,7 +198,9 @@
 
     <div class="twitter-section" id="twitter-section">
         <h2>最近のできごと</h2>
-        <a class="twitter-timeline" data-height="400" href="https://twitter.com/browndogmoko?ref_src=twsrc%5Etfw">Tweets by browndogmoko</a>
+        <blockquote class="twitter-tweet">
+            <a href="https://twitter.com/browndogmoko/status/1967850304994676819">Tweet</a>
+        </blockquote>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
