--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>もこらぼ - Moko Lab</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="background-animation"></div>
+ 
+    <div class="floating-objects">
+        <div class="circle circle-1"></div>
+        <div class="circle circle-2"></div>
+    </div>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#updates">Updates</a></li>
-                <li><a href="#videos">Videos</a></li>
-            </ul>
-        </nav>
+    <aside class="side-sns">
+        <a href="https://twitter.com/（あとでいれる）" target="_blank" class="sns-item"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/@...（あとでいれる）" target="_blank" class="sns-item"><i class="fab fa-youtube"></i></a>
+        <a href="https://github.com/（あとでいれる）" target="_blank" class="sns-item"><i class="fab fa-github"></i></a>
+    </aside>
+
+    <header class="yt-style-header">
+    <div class="header-left">
+        <div class="logo">もこらぼ</div>
+        <div class="status-badge">
+            <span class="dot"></span>
+            <span>LIVE NOW</span> 
+        </div>
+    </div>
     </header>
 
     <main>
@@ -31,12 +43,17 @@
         <div class="container">
             <section id="updates">
                 <h2 class="section-title">最近のできごと</h2>
-                <div class="glass-card">
-                    <a class="twitter-timeline" data-height="500" data-theme="light" href="https://twitter.com/browndogmoko?ref_src=twsrc%5Etfw">Tweets by browndogmoko</a> 
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <div class="glass-card x-container">
+                    <a class="twitter-timeline" 
+                       data-height="500" 
+                       data-theme="light" 
+                       data-chrome="transparent nofooter noborders"
+                       href="https://twitter.com/browndogmoko?ref_src=twsrc%5Etfw">
+                       Tweets by browndogmoko
+                    </a> 
                 </div>
             </section>
-
+            
             <section id="videos">
                 <h2 class="section-title">最近の動画（配信）</h2>
                 <div class="video-grid">
@@ -51,7 +68,21 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 もこらぼ</p>
+        <p>&copy; 2026 もこらぼ</p>
     </footer>
+
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script>
+    // マウスの位置をカードに伝える魔法
+    document.querySelectorAll('.glass-card').forEach(card => {
+        card.addEventListener('mousemove', e => {
+            const rect = card.getBoundingClientRect();
+            const x = ((e.clientX - rect.left) / rect.width) * 100;
+            const y = ((e.clientY - rect.top) / rect.height) * 100;
+            card.style.setProperty('--mouse-x', `${x}%`);
+            card.style.setProperty('--mouse-y', `${y}%`);
+        });
+    });
+</script>
 </body>
 </html>
